hphp/test/slow/inout/bad-call-16.php.expectf
Fatal error: You cannot decorate this argument as `inout` in %s/bad-call-16.php on line 4
